# AutoAim_HUST

./: CMakeLists.txt  README.html  README.md  auto_start.sh
debug/: README.md
debug/3ddraw/: 3ddraw.pro  example_t.hpp  main.cpp  mainwindow.cpp  mainwindow.h
debug/plot/: dynamicdraw.cpp  dynamicdraw.h  handler.cpp  handler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot.pro
debug/plot2/: dynamicdraw.cpp  dynamicdraw.h  handler.h  info.hpp  info.lcm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot2.pro
src/: AutoAim.cpp  AutoAim.h
src/armor_detector/: CMakeLists.txt  README.md
src/armor_detector/include/: ArmorFinder.h  DetectAccelerator.h  Detector.h  EnemyType.h  LightBarFinder.h  NumberClassifier.h  TargetBumper.h
src/armor_detector/src/: ArmorFinder.cpp  DetectAccelerator.cpp  Detector.cpp  LightBarFinder.cpp  NumberClassifier.cpp  TargetBumper.cpp
src/buff/: CMakeLists.txt  README.md
src/buff/include/: AdaptiveEKF.hpp  buffAngleKalman.h  buffArmorNode.h  buffClassifier.h  buffCompensation.h  buffCurver.h  buffDetector.h  buffPredictor.h
src/buff/src/: buffAngleKalman.cpp  buffClassifier.cpp  buffCompensation.cpp  buffCurver.cpp  buffDetector.cpp  buffPredictor.cpp
src/driver/: CMakeLists.txt  README.md
src/driver/include/: DxImageProc.h  GxCamera.h  GxIAPI.h  SerialPort.h  VideoCapture.h
src/driver/src/: GxCamera.cpp  SerialPort.cpp  VideoCapture.cpp
src/lcm/: CMakeLists.txt  README.md  example_t.lcm  lcm_module.cpp  lcm_module.h
src/pose_estimate/: CMakeLists.txt  README.md
src/pose_estimate/include/: AdaptiveEKF.hpp  ExtendedKalman.hpp  NormalEKF.h  NormalKalman.h  PitchYawFilter.h  PoseSolver.h  Predictor.h  STF.hpp  SecondFilter.h
src/pose_estimate/src/: NormalEKF.cpp  NormalKalman.cpp  PitchYawFilter.cpp  PoseSolver.cpp  Predictor.cpp  SecondFilter.cpp
src/utils/: CMakeLists.txt  README.md
src/utils/destroy/: AdaptiveEKF.hpp  CAModel.cpp  CAModel.h  CTModel.cpp  CTModel.h  README.md  SingerExtendedFilter.cpp  SingerExtendedFilter.h  SingerFilter.cpp  SingerFilter.h
src/utils/include/: Config.h  LockFreeQueue.hpp  Log.h  Params.h  Timer.h
src/utils/script/: hog.py  svm.py
src/utils/src/: Config.cpp  Log.cpp  Params.cpp  Timer.cpp
src/utils/tools/: buff_model.xml  init.json
